+ Made the app quicker to load the booklet by minimising the DOM requests. + Inquired the loading bug of the booklet, it loads well but took too much time. Fixed #154

--- a/war/SwissMuseumParcours.css
+++ b/war/SwissMuseumParcours.css
@@ -69,12 +69,23 @@
 /********************** MENUS - INFO *******************************************/
 
 .infoPanel {
-	
+	background: whiteSmoke;
 }
 
 .infoPanel-content {
 	margin: 1em 1em 1em 2em;
 	font-family: monospace;
+	background: white;
+	padding: 0.3em;
+	
+	-moz-border-radius: 	0.2em;
+	-webkit-border-radius: 	0.2em;
+	border-radius: 			0.2em;
+	-khtml-border-radius: 	0.2em;
+	
+	-moz-box-shadow:    0px 0px 1px 0px black, inset 0px 0px 35px 1px whiteSmoke;
+  	-webkit-box-shadow: 0px 0px 1px 0px black, inset 0px 0px 35px 1px whiteSmoke;
+ 	 box-shadow:        0px 0px 1px 0px black, inset 0px 0px 35px 1px whiteSmoke;
 }
 
 .infoPanel-returnButton {
@@ -111,8 +122,6 @@
 	
 	font-weight:bold;
 	font-size: 1em;
-	
-	cursor: pointer;
 	
 	outline: none;
 	
